test/functions/vass/resolution/need-missing-return-error-1.good
need-missing-return-error-1.chpl:5: In function 'funfun':
need-missing-return-error-1.chpl:5: error: control reaches end of function that returns a value
