test/functions/vass/resolution/need-missing-return-error-1.chpl

var x = funfun();
writeln(x);

proc funfun(): uint(8) {
  writeln();
}
